[project]
name = "lynx"
version = "0.1.0"
description = "NYC Yellow Taxi trip analysis — stratified 2018–2023 sample, Polars + DuckDB"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.3",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "seaborn>=0.13.2",
]
